# O5-Council

./: .gitignore  LICENSE  O5 Council Additional Context Prompt.md  O5 Council Test Prompt  README.md  openrouter_model_links.md  pyproject.toml
Result/: o5-council-report-test-2.md  o5-council-report-test-3.md  o5-council-report.md
docs/: architecture.md
o5_council/: __init__.py  app.py  config.py  council_engine.py  history_store.py  models.py  openrouter_client.py  settings_store.py  workers.py
o5_council/ui/: __init__.py  main_window.py  theme.py
scripts/: install.sh
tests/: test_council_engine.py
